TokenField: fixed alignment of x icon in borderless state

--- a/client/components/token-field/style.scss
+++ b/client/components/token-field/style.scss
@@ -97,7 +97,7 @@ input[type="text"].token-field__input {
 		.token-field__remove-token {
 			background: transparent;
 			color: $gray;
-			padding: 0 2px;
+			padding: 1px 2px;
 		}
 
 		&.is-success {
